@@ -4,7 +4,7 @@ data1 <- data.frame(idd = c(1,5,4,3,2,6), x1=1:6, age=50:55)
 data2 <- data.frame(idd = c(2,5,1,2,1), x2=5:1, age=48:44)
 test1 <- tmerge(data1, data1, id=idd, death=event(age))
 test2 <- tmerge(test1, data2, id=idd, zed=tdc(age, x2))
-all.equal(test2$id, c(1,1,1,5,5,4,3,2,2,2,6))
+all.equal(test2$idd, c(1,1,1,5,5,4,3,2,2,2,6))
 all.equal(test2$tstop, c(44, 46, 50, 47, 51, 52, 53, 45, 48, 54, 55))
 all.equal(test2$death, c(0,0,1,0,1,1,1,0,0,1,1))
 all.equal(test2$zed, c(NA, 1, 3,NA, 4, NA, NA, NA, 2, 5, NA))
