@@ -1,0 +1,43 @@
+\documentclass{article}[11pt]
+\usepackage{Sweave}
+\usepackage{amsmath}
+\addtolength{\textwidth}{1in}
+\addtolength{\oddsidemargin}{-.5in}
+\setlength{\evensidemargin}{\oddsidemargin}
+%\VignetteIndexEntry{Other vignettes}
+
+\title{Other Vignettes}
+\author{Terry Therneau}
+
+\begin{document}
+\maketitle
+
+A parallel source for the survival package is the therneau/survival directory on
+github.
+This copy contains several extra vignettes, in the vignette2 directory, that
+are not part of the CRAN copy.
+
+\begin{enumerate}
+   \item tutorial.Rnw: This works through the examples found in the excellent
+     tutorial by H. Putter, M. Fiocco and R. Geskus. 
+     Tutorial in biostatistics: competing risks and multi-state models,
+     Statistics in Medicine, 2006.
+   \item sas.Rnw: An expanded discussion answering some repeated queries about 
+     how survival package results differ from SAS.
+   \item tests.Rnw: A harder look at what SAS ``type 3'' tests are.
+   \item singer.Rnw: Worked examples from a texbook by Singer and Willett.
+\end{enumerate}
+
+Number 1 is not on CRAN because it makes use of a data set from the mstate 
+package.  As a recommended package survival cannot depend on anything outside
+of the base + recommended R.  (A minimally sufficient set that is self contained
+is useful for R maintainance and validation.)
+Number 2 delves into relative computing time questions, and those examples take
+a very long time to run.
+Material in the third vigette is now discussed at a higher level in the 
+population estimate and adjusted survival curves vignettes.
+
+In time, we expect this set of other vignettes to grow.  
+\end{document}
+
+
